--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "private": false,
   "scripts": {
     "test": "jest",
-    "test-dev": "jest --watch"
+    "test-dev": "jest --watch",
+    "test-one": "jest ./examples/_tests_/api-graphql.test.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
